package view.ihm;

public enum TypeAlignement {
    RIGHT,LEFT,JUSTIFY,CENTER
}
